# PY-Sinais__Trade__Moedas

./: README.md  main.py  pyproject.toml
