[project]
name = "exnova-bot"
version = "0.1.0"
description = "Sala de sinais automática para opções binárias"
readme = "README.md"
requires-python = ">=3.11" # 3.13 ainda não foi lançado
dependencies = [
    "pandas>=2.0,<2.3",    # base do DataFrame
    "numpy<2.0",           # evita o bug do NaN no pandas-ta
    "pandas-ta>=0.3.14b0",
    "aiohttp>=3.9",        # cliente HTTP assíncrono
    "python-dotenv>=1.0",
    "iqoptionapi>=2.1.2",
    "websockets>=12.0",    # carrega variáveis do .env
]

[project.optional-dependencies]
dev = [
    "setuptools>=68", # fornece pkg_resources
    "wheel",
]
